--- a/Chrome Extention/popup.html
+++ b/Chrome Extention/popup.html
@@ -1,45 +1,152 @@
 <!doctype html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8" />
   <title>HIT 自动登录</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root { --pri:#0ea5e9; --bd:#e5e7eb; --fg:#111; --mut:#666; }
-    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif; margin:14px; width: 300px; color:var(--fg); }
-    header { display:flex; align-items:center; justify-content:space-between; gap:8px; }
-    h1 { font-size: 16px; margin: 0 0 10px; }
-    .help { text-decoration:none; font-weight:700; border:1px solid var(--bd); width:24px; height:24px; border-radius:50%;
-            display:flex; align-items:center; justify-content:center; color:#111; }
-    .help:hover { background:#f5f5f5; }
-
-    label { display:block; font-size:12px; color:var(--mut); margin:12px 0 6px; }
-    input[type="text"], input[type="password"] {
-      width:100%; box-sizing:border-box; padding:10px 12px; border:1px solid var(--bd); border-radius:10px; outline:none;
+    :root {
+      --pri: #0ea5e9;
+      --bd: #e5e7eb;
+      --fg: #111;
+      --mut: #666;
     }
-    input[type="text"]:focus, input[type="password"]:focus { border-color: var(--pri); box-shadow: 0 0 0 3px rgba(14,165,233,.15); }
 
-    .row { display:flex; align-items:center; justify-content:space-between; gap:10px; margin-top:12px; }
-    .hint { font-size:12px; color:var(--mut); margin-top:10px; min-height:18px; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, PingFang SC, Microsoft YaHei, sans-serif;
+      margin: 14px;
+      width: 300px;
+      color: var(--fg);
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 8px;
+    }
+
+    h1 {
+      font-size: 16px;
+      margin: 0 0 10px;
+    }
+
+    .help {
+      text-decoration: none;
+      font-weight: 700;
+      border: 1px solid var(--bd);
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #111;
+    }
+
+    .help:hover {
+      background: #f5f5f5;
+    }
+
+    label {
+      display: block;
+      font-size: 12px;
+      color: var(--mut);
+      margin: 12px 0 6px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px 12px;
+      border: 1px solid var(--bd);
+      border-radius: 10px;
+      outline: none;
+    }
+
+    input[type="text"]:focus,
+    input[type="password"]:focus {
+      border-color: var(--pri);
+      box-shadow: 0 0 0 3px rgba(14, 165, 233, .15);
+    }
+
+    .row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      margin-top: 12px;
+    }
+
+    .hint {
+      font-size: 12px;
+      color: var(--mut);
+      margin-top: 10px;
+      min-height: 18px;
+    }
 
     /* iOS风格开关 */
-    .switch { position: relative; width: 48px; height: 28px; }
-    .switch input { display:none; }
-    .slider {
-      position:absolute; inset:0; background:#e5e7eb; border-radius:999px; cursor:pointer; transition: background .18s ease;
+    .switch {
+      position: relative;
+      width: 48px;
+      height: 28px;
     }
-    .slider::before {
-      content:""; position:absolute; width:22px; height:22px; left:3px; top:3px; background:#fff; border-radius:50%;
-      box-shadow:0 1px 3px rgba(0,0,0,.2); transition: transform .18s ease;
-    }
-    .switch input:checked + .slider { background: #22c55e; }
-    .switch input:checked + .slider::before { transform: translateX(20px); }
 
-    .kv { font-size: 13px; color: var(--mut); }
-    select { border:1px solid var(--bd); border-radius:10px; padding:6px 10px; }
-    .lang-row { display:flex; align-items:center; gap:8px; }
+    .switch input {
+      display: none;
+    }
+
+    .slider {
+      position: absolute;
+      inset: 0;
+      background: #e5e7eb;
+      border-radius: 999px;
+      cursor: pointer;
+      transition: background .18s ease;
+    }
+
+    .slider::before {
+      content: "";
+      position: absolute;
+      width: 22px;
+      height: 22px;
+      left: 3px;
+      top: 3px;
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+      transition: transform .18s ease;
+    }
+
+    .switch input:checked+.slider {
+      background: #22c55e;
+    }
+
+    .switch input:checked+.slider::before {
+      transform: translateX(20px);
+    }
+
+    .kv {
+      font-size: 13px;
+      color: var(--mut);
+    }
+
+    select {
+      border: 1px solid var(--bd);
+      border-radius: 10px;
+      padding: 6px 10px;
+    }
+
+    .lang-row {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
   </style>
 </head>
+
 <body>
   <header>
     <h1 id="ttl">HIT 自动登录</h1>
@@ -75,7 +182,16 @@
     </label>
   </div>
 
+  <div class="row">
+    <div class="kv" id="kvIdp">自动同意校外授权</div>
+    <label class="switch" title="即点即生效">
+      <input id="idpAuth" type="checkbox" />
+      <span class="slider"></span>
+    </label>
+  </div>
+
 
   <script src="popup.js"></script>
 </body>
+
 </html>
